@@ -39,6 +39,9 @@
 <p>2012-06-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/blob.c (MagickFileHandle): Refer to stdio, bzip2, and
+gzip file handles using their own type.  Eliminates warnings
+observed when compiling with zlib 1.2.7.</li>
 <li>tiff: Updated libtiff to 4.0.2 release.</li>
 <li>png: Updated libpng to 1.5.11 release.</li>
 </ul>
